--- a/signin.html
+++ b/signin.html
@@ -18,12 +18,12 @@
       <form action="#" class="login">
         <div class="fill">
           <label for="">FirstName: </label> <br />
-          <input type="text" placeholder="username"/>
+          <input type="text" placeholder="firstname"/>
         </div>
 
         <div class="fill">
             <label for="">LastName: </label> <br />
-            <input type="text" placeholder="username"/>
+            <input type="text" placeholder="lastname"/>
           </div>
   
         <div class="fill">
